<resources>
    <string name="app_name">EC Saver</string>
    <string name="year_name">Enter the old Year</string>
    <string name="birthday_date">Birthday Date</string>
    <string name="years">Total Years : </string>
    <string name="month">Total Month : </string>
    <string name="days">Total Days : </string>
    <string name="to_date">UP-TO</string>
    <string name="result">Display Your Age</string>
    <string name="bmi_age">Age (optional)</string>
    <string name="date">Date</string>
    <string name="ec_number">EC Number</string>
    <string name="Ec_type">EC Type</string>
    <string name="dates">29 dec 2019</string>
    <string name="ec_numbers">123456</string>
    <string name="Ec_types">FO</string>
    <string name="Ec_Off">DayOff</string>
    <string name="YourRecord">Save Records</string>
    <string name="Day">Day</string>
    <string name="Month">Month</string>
    <string name="dateOfMonth">DateOfMonth</string>
    <string name="Calculate">Calculate</string>
    <string name="Clear">Clear</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="today">ToDay</string>
    <string name="previousDay">Previous Day</string>
    <string name="savedayoff">Save DayOff Leave</string>
    <string name="getSavedEC">Get EC Numbers</string>
    <string name="bmicalculator"> BMI calculator</string>
    <string name="Age_Calculator"> Age Calculator</string>
    <string name="aboutUS">Version App 24.1.23\nEmail ID: sajiiidali1122@gmail.com\nPhone #0302 329 4411</string>
    <string name="moreApps"> MORE APPS</string>
    <string name="share"> Share</string>
    <string name="rateus"> Rate Us</string>
    <string name="about"> About</string>
    <string name="deleteWholeData">Delete All Saved Data</string>
    <string name="Weight">Weight</string>
    <string name="kg">KG</string>
    <string name="Height">Height (ft and inch)</string>
    <string name="Feet">Feet</string>
    <string name="inch">inch</string>
    <string name="Calculate_BMI">Calculate BMI</string>
    <string name="Your_Age">Your Age</string>
    <string name="confirm">Do You Want to delete All Saved Data in App?</string>
    <string name="hintName">ENTER EC NUMBER</string>
    <string name="save">Save</string>
    <string name="OK">OK</string>
    <string name="hintDate">12 dec 2019</string>
    <string name="january">January</string>
    <string name="febuary">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="july">July</string>
    <string name="june">June</string>
    <string name="august">August</string>
    <string name="sptember">September</string>
    <string name="december">December</string>
    <string name="november">November</string>
    <string name="october">October</string>
    <string name="Cancle">Cancel</string>
    <string name="editECNumber">Edit your date</string>
    <string name="editECNumberr">Edit your EC Number</string>
    <string name="editEctype">Edit your EC type</string>
    <string name="Backup">Sign-In</string>
    <string name="backup">For Backup Go to Your mobile //Settings//Account and Backup//GoogleDriveBackup</string>
    <string name="checkThisVideo">Check This Video How To</string>
    <string name="dayOff">DayOFF LEAVE</string>
    <string name="signOut">SignOut</string>
    <string name="saveToGDrive">Upload to GDrive</string>
    <string name="downloadData">Download From GDrive</string>
    <string name="message_google_sign_in_failed">Google Sign In failed</string>
    <string name="message">fcm message</string>
    <string name="notification">Alert !!!</string>
    <string name="zero_Value">0</string>
    <string name="totalEmergency">Total Emergency Of This Month</string>
    <string name="year">Year</string>
    <string name="home">Home</string>
    <string name="rescueDashBoard">DashBoard</string>
    <string name="more">More</string>
    <string name="companyName">Digital Finger Apps</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="checkUpdate">Check Updates</string>
    <string name="MainPage">Main Page</string>
    <string name="ActiveJobs">Active Jobs</string>
    <string name="FinalResults">Final Results</string>
    <string name="tEmergency">Total EC: </string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="March">Mar</string>
    <string name="April">Apr</string>
    <string name="May">May</string>
    <string name="June">Jun</string>
    <string name="July">Jul</string>
    <string name="Auguest">Aug</string>
    <string name="September">Sep</string>
    <string name="October">Oct</string>
    <string name="November">Nov</string>
    <string name="December">Dec</string>
    <string name="signIn">Sign-In With Google</string>
    <string name="login">Welcome to Sign-In With Google Screen</string>
    <string name="Sign_In">Sign-In</string>
    <string name="spinnerName2">Select One</string>

    <string name="spinnerName">Select EC Type</string>
    <string-array name="spinnerItem">
        <item>RC</item>
        <item>ME</item>
        <item>FO</item>
        <item>WR</item>
        <item>RO</item>
        <item>OO</item>
        <item>REF</item>
    </string-array>

    <string-array name="spinnerItem2">
        <item>Select One</item>
        <item>DAY OFF</item>
        <item>CASUAL LEAVE</item>
        <item>MEDICAL LEAVE</item>
        <item>POWER LEAVE</item>
        <item>MARRIAGE LEAVE</item>
        <item>PATERNITY LEAVE</item>
        <item>NATIONAL DAY</item>
        <item>DUTY CHANGE</item>
    </string-array>


    // test ads
<!--    <string name="Interstitial_ad">ca-app-pub-3940256099942544/1033173712</string>-->
<!--    <string name="Banner_ad">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="Rewarded_ad">ca-app-pub-3940256099942544/5224354917</string>-->

    // Orignal Ads
    <string name="Interstitial_ad">ca-app-pub-1241237715193709/2049228828</string>
    <string name="Banner_ad">ca-app-pub-1241237715193709/5970430028</string>
    <string name="Rewarded_ad">ca-app-pub-1241237715193709/8142455884</string>
</resources>
