<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kotlin.fragments.getMonthByUser">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


                <Button
                    android:id="@+id/btnjanuary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/shape"
                    android:text="@string/january"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnfebruary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/shape"
                    android:text="@string/febuary"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnmarch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/shape"
                    android:text="@string/march"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/btnapril"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/shape"
                    android:text="@string/april"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnmay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/shape"
                    android:text="@string/may"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnjune"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/shape"
                    android:text="@string/june"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/btnjuly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/shape"
                    android:text="@string/july"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnaugust"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/shape"
                    android:text="@string/august"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/btnseptember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/shape"
                    android:text="@string/sptember"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnoctober"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/shape"
                    android:text="@string/october"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/btnnovember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/shape"
                    android:text="@string/november"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/btndecember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/shape"
                    android:text="@string/december"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>