<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".kotlin.fragments.MoreFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <!--
            <Button
                android:id="@+id/saveToGDrive"
                android:gravity="start|center"
                android:drawableStart="@drawable/ic_about"
                android:background="@drawable/more_button_desing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/saveToGDrive" />
-->
            <!--
            <Button
                android:id="@+id/downloadFromGDrive"
                android:gravity="start|center"
                android:drawableStart="@drawable/ic_about"
                android:background="@drawable/more_button_desing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/downloadData" />
-->

            <!--
            <Button
                android:id="@+id/backup"
                android:gravity="start|center"
                android:drawableStart="@drawable/ic_about"
                android:background="@drawable/more_button_desing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/Backup" />
-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bmi_calculator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/white"
                android:gravity="start|center"
                android:text="@string/bmicalculator"
                android:drawableStart="@drawable/ic_calculator" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/age_calculator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start|center"
                android:textColor="@color/white"
                android:text="@string/Age_Calculator"
                android:drawableStart="@drawable/ic_calculator" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start|center"
                android:textColor="@color/white"
                android:text="@string/share"
                android:drawableStart="@drawable/ic_share" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Rateus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start|center"
                android:textColor="@color/white"
                android:text="@string/rateus"
                android:drawableStart="@drawable/ic_rateus" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/privacypolicy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape"
                android:textColor="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start|center"
                android:text="@string/privacyPolicy"
                android:drawableStart="@drawable/ic_privacy_policy" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape"
                android:textColor="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start|center"
                android:text="@string/checkUpdate"
                android:drawableStart="@drawable/ic_update" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/aboutUs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape"
                android:textColor="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start|center"
                android:text="@string/about"
                android:drawableStart="@drawable/ic_about" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>