<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".kotlin.fragments.SaveDayOffLeave">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:background="@color/holo_blue_light"
            android:id="@+id/tvdateforDayoff"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/holo_blue_light"
            android:layout_margin="10dp">

            <AutoCompleteTextView
                android:id="@+id/SaveDayOffAutoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="none"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/white"
                android:text="@string/spinnerName2"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/save"
            android:background="@drawable/shape"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/btnsaveOfDayoff" />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="@string/Banner_ad">
        </com.google.android.gms.ads.AdView>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

    </LinearLayout>




</RelativeLayout>